# ML_Tetris

./: .gitignore  CHANGELOG.md  README.md  benchmark_ai.py  compare_ai.py  evaluate_ai.py  pyproject.toml  requirements.txt  run_ai.py  train_ai.py  train_placement_ai.py
artifacts/: ai_policy.pt  audit_manifest.jsonl  benchmark_result.json  evaluate_manifest.jsonl  evaluation_report.md  evaluation_result.json  high_score.json  run_manifest.jsonl  training_feedback.md  training_metrics.jsonl  watch_manifest.jsonl
docs/: ai_evaluation_example.md  ai_pipeline.md  architecture.md  safety_wrapper.md
sprints/: 00_PROJECT_BRIEF.md  01_PROJECT_BOOTSTRAP.md  02_BOARD_MODEL.md  03_PIECE_MODEL.md  04_COLLISION_AND_PLACEMENT.md  05_ACTIVE_GAME_STATE.md  06_SCORING_AND_LEVELS.md  07_PYGAME_RENDERING_MINIMAL.md  08_INPUT_AND_PLAYABILITY.md  09_NEXT_QUEUE_AND_HOLD.md  10_WALL_KICKS_AND_ROTATION_POLISH.md  11_GAME_OVER_UI_AND_POLISH.md  12_REGRESSION_HARDENING_AND_README.md
src/ai_agent/: __init__.py  deployment.py  diagnostics.py  environment.py  (+8 more)
tests/: conftest.py  test_ai_deployment.py  test_ai_diagnostics.py  test_ai_environment.py  test_ai_evaluation.py  test_ai_placement.py  test_ai_policy.py  test_ai_rewards.py  test_ai_safety.py  test_ai_training.py  test_ai_vectorized.py  test_api.py  test_board.py  test_compare_ai.py  test_difficulty.py  test_game_state.py  test_high_score.py  test_imports.py  test_input_handler.py  test_launcher_menu.py  test_piece_source.py  test_pieces.py  test_regression.py  test_renderer.py  test_run_ai.py  test_scoring.py  test_train_ai.py
(+13 files in other folders)
