[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-rl-workbench"
version = "0.2.0"
description = "Python Tetris clone extended into a reinforcement-learning workbench with PPO, safety-guarded play, benchmarking, evaluation, and manifest-based decision logging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
    "numpy>=1.24",
    "torch>=2.0",
    "gymnasium>=0.29",
]

[project.scripts]
tetris = "tetris.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow (neural-network training or multi-env steps) — deselect with -m 'not slow'",
]
addopts = "--tb=short"
